# potential

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/db/: schema.sql
backend/db/migrations/: 20200428082446_create_activites.sql  20200428082446_initial_schema.sql
backend/src/: api.rs  db.rs  main.rs  test_util.rs
backend/src/db/: activities.rs  activity_events.rs  import.rs  mod.rs  users.rs
backend/src/web/: api.rs  mod.rs
db/: schema.sql
db/migrations/: 20200428082446_create_activites.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  store.ts
frontend/src/store/: activities.ts
src/: db.rs  main.rs
