[package]
name = "potential"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.5", features=["attributes"]}
sqlx = {version="0.3", features=["postgres"]}