[package]
name = "potential"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
async-std = {version="1.5", features=["attributes"]}
dotenv = "0.15.0"
http-types = "1.2.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
sqlx = {version="0.3", features=["postgres"]}
tide = "0.8.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tracing-futures = "0.2.4"

