[package]
name = "potential"
version = "0.1.0"
authors = ["Dennis Collective <dennis.collective@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.3", features = ["attributes"] }
chrono = { version = "0.4.15", features = ["serde"] }
csv = "1.1.3"
dotenv = "0.15.0"
duct = "0.13.4"
http-types = "2.4.0"
secrecy = "0.7.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.3.5", features = ["postgres"] }
surf = "1.0.3"
tide = "0.13.0"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"
tap = "0.4.0"

